@@ -1,3 +1,3 @@
-VERSION=4.08.05
+VERSION=4.08.06
 YEARS=2005-2018
 
