@@ -122,9 +122,9 @@ tt(ostringstream) object.
 manpagesection(STATIC MEMBERS)
 
     The following convenience functions can be used for controlled opening of
-stream-type objects, like tt(std::ofstream) and tt(std::ifstream). These
-stream-type objects must support tt(open) and tt(close) members, like those
-provided by tt(std::ifstream) and tt(std::ofstream). 
+stream-type objects, like tt(std::ofstream) and tt(std::ifstream)
+objects. These stream-type objects must support tt(open) and tt(close)
+members, like those provided by tt(std::ifstream) and tt(std::ofstream).
 
 If the stream  was already open it is first closed.
 
@@ -132,6 +132,68 @@ If opening fails an tt(FBB::Exception) exception is thrown containing a
 short message stating that the named stream could not be opened. 
 
     itemization(
+    itb(static StreamType factory<StreamType>(std::string const &name))
+       Returns an open tt(StreamType> stream object which can be used to
+        move-construct a tt(StreamType) object. E.g.,
+            verb(
+    ofstream out{ Exception::factory<ofstream>("/tmp/out") };
+            )
+
+    itb(static StreamType factory<StreamType>(int errnoValue, 
+                                              std::string const &name))
+        Returns an open tt(StreamType> stream object which can be used to
+        move-construct a tt(StreamType) object. If constructing
+        the stream object fails, then the thrown bf(FBB::Exception) assigns
+        tt(errnoValue) to tt(FBB::g_errno).
+
+    itb(static StreamType factory<StreamType>(std::string const &name,
+                                              std::ios::openmode mode))
+       Returns an open tt(StreamType> stream object, created using
+        the tt(openmode mode) flags,  which can be used to
+        move-construct a tt(StreamType) object.
+
+    itb(static StreamType factory<StreamType>(int errnoValue,
+                                              std::string const &name,
+                                              std::ios::openmode mode))
+       Returns an open tt(StreamType> stream object, created using
+        the tt(openmode mode) flags,  which can be used to
+        move-construct a tt(StreamType) object.  If constructing
+        the stream object fails, then the thrown bf(FBB::Exception) assigns
+        tt(errnoValue) to tt(FBB::g_errno).
+
+    itb(static StreamType factory<StreamType>(std::string const &name,
+                                              std::ios::openmode mode1,
+                                              std::ios::openmode mode2)
+       Returns an open tt(StreamType> stream object. the stream is initially
+        opened using tt(mode1). If that fails, tt(mode2) is used. If both ways
+        to open the stream fail, then an tt(Exception) is thrown.  The
+        returned stream can be used to move-construct a tt(StreamType) object.
+        This member can be used to open an tt(std::fstream) which may or may
+        not yet exist for both reading and writing. E.g., 
+            verb(
+    fstream out{ Exception::factory<fstream>("/tmp/out", 
+                ios::in | ios::out,
+                ios::in | ios::out | ios::trunc) };
+            )
+       If tt(/tmp/out) already exists, then tt(ios::in | ios::out) should
+        succeed. If it doesn't, then it's created empty for reading and
+        writing, using tt(ios::in | ios::out | ios::trunc).
+
+    itb(static StreamType factory<StreamType>(int errnoValue,
+                                              std::string const &name,
+                                              std::ios::openmode mode1,
+                                              std::ios::openmode mode2)
+       Returns an open tt(StreamType> stream object. the stream is initially
+        opened using tt(mode1). If that fails, tt(mode2) is used. If both ways
+        to open the stream fail, then an tt(Exception) is thrown, assigning
+        tt(errnoValue) to tt(FBB::g_errno).
+
+    itb(static void open(int errnoValue, StreamType &stream,
+                        std::string const &name, std::ios::openmode mode))
+       Opens the stream object, using its tt(open) member, passing tt(mode) to
+        tt(open). If opening the stream fails, then the thrown
+        bf(FBB::Exception) assigns tt(errnoValue) to tt(FBB::g_errno).
+
     itb(static void open(StreamType &stream, std::string const &name))
         Opens the stream object, using its default tt(open) member.
 
@@ -139,7 +201,7 @@ short message stating that the named stream could not be opened.
                          StreamType &stream, std::string const &name))
        Opens the stream object, using its default tt(open) member. If opening
         the stream fails, then the thrown bf(FBB::Exception) assigns
-tt(errnoValue) to tt(::errno).
+        tt(errnoValue) to tt(FBB::g_errno).
 
     itb(static void open(StreamType &stream, std::string const &name,
                                     std::ios::openmode mode))
@@ -150,7 +212,22 @@ tt(errnoValue) to tt(::errno).
                         std::string const &name, std::ios::openmode mode))
        Opens the stream object, using its tt(open) member, passing tt(mode) to
         tt(open). If opening the stream fails, then the thrown
-        bf(FBB::Exception) assigns tt(errnoValue) to tt(::errno).
+        bf(FBB::Exception) assigns tt(errnoValue) to tt(FBB::g_errno).
+
+    itb(static void open(StreamType &stream, std::string const &name,
+                                    std::ios::openmode mode1,
+                                    std::ios::openmode mode2))
+       Opens the stream object, using its tt(open) member, , initially passing
+        tt(mode1) to tt(open). If that fails, tt(mode2) is used. If both ways
+        to open the stream fail, then an tt(Exception) is thrown.
+
+    itb(static void open(int errnoValue, StreamType &stream,
+                        std::string const &name, std::ios::openmode mode1,
+                                    std::ios::openmode mode2))
+       Opens the stream object, using its tt(open) member, initially passing
+        tt(mode1) to tt(open). If that fails, tt(mode2) is used. If both ways
+        to open the stream fail, then an tt(Exception) is thrown, assigning
+        tt(errnoValue) to tt(FBB::g_errno).
 
     itb(static size_t protection(std::string const &path, size_t protect, 
                           Protection type = EQUAL))
@@ -187,7 +264,7 @@ modified when tt(errno) holds an invalid value).
 manpagesection(EXAMPLE)
         verb(
     if (exceptionalCondition)
-        throw FBB::Exception(1) << "Exceptional condition occurred";
+        throw FBB::Exception{ 1 } << "Exceptional condition occurred";
         )
 
 manpagefiles()
